--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,64 @@ body {
     margin: 0;
     padding: 0;
     cursor: default;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1rem;
+}
+
+/*Registration css*/
+.registration {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f0f0f1;
+    border-radius: 0.3rem;
+    margin: 0.625rem 1.25rem;
+    padding: 5px;
+    gap: 0.625rem;
+}
+
+.registration > div {
+    flex: 1;
+    text-align: center;
+}
+
+.information h2 {
+    font-size: 1rem;
+    margin: 0;
+}
+
+.information2 {
+    background-color: #df1c1a;
+    border-radius: 1.25rem;
+}
+
+.information2 img {
+    width: 600px;
+    border-radius: 20px;
+}
+
+.logo {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo img {
+    width: 40px;
+    height: 40px;
+    transition: transform 0.3s ease;
+}
+
+.logo img:hover {
+    transform: scale(1.1);
 }
 
 /*Header css*/
 header {
     background-color: #a93339;
     text-align: center;
-    margin: 20px;
-    margin-bottom: 0;
+    margin: 0 1.25rem;
 }
 
 header img {
@@ -18,14 +67,13 @@ header img {
     height: 150px;
 }
 
-/*navar css*/
+/*Navbar css*/
 nav {
-    margin: 20px;
-    margin-top: 0;
-    background-color: #ededee;
+    margin: 0 1.25rem;
+    background-color: #f0f0f1;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #111;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .menu {
@@ -42,12 +90,12 @@ nav {
 
 .menu li a {
     display: block;
-    padding: 15px 25px;
+    padding: 0.625rem 0.9375rem;
     text-align: center;
     color: #111;
     text-decoration: none;
     border-radius: 2px;
-    transition: background-color 0.4s ease-in-out, transform 0.3s ease, box-shadow 0.3s ease;
+    transition: background-color 0.2s ease-in-out, transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 .menu li a:hover {
@@ -55,5 +103,5 @@ nav {
     background-color: #bb4242;
     transform: scale(1.03);
     color: white;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
